--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -3,7 +3,8 @@
     \dominitoc
     \tableofcontentsfile
 	\pagenumbering{arabic}
-    \setcounter{page}{1}
+    \setcounter{page}{1} 
+	\setcounter{chapter}{5} 
 	\addbibresource{../Biblio/biblio.bib}
 }{}
 
