--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \usepackage{mathtools}
 \usepackage{subfiles}
 %\SetRealMargins{26mm}{16mm}
+\renewcommand{\floatpagefraction}{.8}
 
 \DefineBibliographyStrings{french}{
   %  backrefpage={see p.},
@@ -48,7 +49,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-%\addbibresource{./Biblio/biblio.bib}
+\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
@@ -72,9 +73,9 @@
 \subfile{02-Architectures/source}
 \subfile{03-SOM/source}
 \subfile{04-Representation/source}
-\subfile{05-Indicateur/source}
 \subfile{07-Relaxation/source}
 \subfile{06-Analyse/source}
+\subfile{05-Indicateur/source}
 \subfile{06b-Analyse-2D/source}
 
 \subfile{Conclusion}
