--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1540,3 +1540,36 @@
 	year = {2017},
 }
 
+@inproceedings{Polani2001MeasuresFT,
+  title={Measures for the organization of self-organizing maps},
+  author={Daniel Polani},
+  year={2001}
+}
+
+@article{Tatoian2018SelfOrganizingMC,
+  title={Self-Organizing Map Convergence},
+  author={Robert Tatoian and Lutz Hamel},
+  journal={Int. J. Serv. Sci. Manag. Eng. Technol.},
+  year={2018},
+  volume={9},
+  pages={61-84}
+}
+
+@inproceedings{Breard2017EvaluatingSM,
+  title={Evaluating Self-Organizing Map Quality Measures as Convergence Criteria},
+  author={Gregory Breard},
+  year={2017}
+}
+
+
+@article{flanagan_self-organisation_1996,
+	title = {Self-organisation in {Kohonen}'s {SOM}},
+	volume = {9},
+	abstract = {Seljorganisation in Kohonen’sseljorganising map (SOM) is analysedby considering the neuron weights to be a Markovprocess. While many works exist whichanalyse the one-dimensional SOM, the ati of the study ir to akmonstrate probability one convergence of the neuron weights to an organised configuration in one- and also in higher-dimensional SOMS.},
+	number = {7},
+	journal = {Neural Networks},
+	author = {Flanagan, John A.},
+	month = oct,
+	year = {1996},
+	pages = {1185--1197},
+}
